--- a/src/App.css
+++ b/src/App.css
@@ -288,3 +288,19 @@ h3 {
   display: block;
   width: 100%;
 }
+
+/* Animation  */
+.item-enter {
+  opacity: 0;
+}
+.item-enter-active {
+  opacity: 1;
+  transition: opacity 1000ms ease-in;
+}
+.item-exit {
+  opacity: 1;
+}
+.item-exit-active {
+  opacity: 0;
+  transition: opacity 1000ms ease-in;
+}
