--- a/src/App.css
+++ b/src/App.css
@@ -304,3 +304,13 @@ h3 {
   opacity: 0;
   transition: opacity 1000ms ease-in;
 }
+
+.two-block-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.two-block {
+  flex: 0 0 50%;
+  padding: 10px;
+}
